--- a/index.ipynb
+++ b/index.ipynb
@@ -2,22 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in /opt/anaconda3/envs/myenv/lib/python3.10/site-packages (2.2.6)\n",
+      "Requirement already satisfied: opencv-python in /opt/anaconda3/envs/myenv/lib/python3.10/site-packages (4.12.0.88)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install numpy opencv-python\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cv2 as cv\n",
-    "import glob"
+    "import glob\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -203,18 +213,9 @@
     "        print(dist)\n",
     "        print(f\"\\nReprojection Error: {reprojection_error:.4f} pixels\")\n",
     "        print(f\"{'='*50}\\n\")\n",
-    "    else:\n",
-    "        print(f\"⚠ WARNING: No corners found in any images from {folder_pattern}\\n\")\n",
+    "\n",
     "\n",
     "cv.destroyAllWindows()\n",
-    "\n",
-    "# ============================================================================\n",
-    "# SELECT BEST CALIBRATION BASED ON LOWEST REPROJECTION ERROR\n",
-    "# ============================================================================\n",
-    "\n",
-    "if len(calibration_results) == 0:\n",
-    "    print(\"ERROR: No successful calibrations found!\")\n",
-    "    exit()\n",
     "\n",
     "# Find calibration with lowest reprojection error\n",
     "best_calib = min(calibration_results.items(), \n",
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -306,17 +307,6 @@
       "============================================================\n",
       "\n",
       "✓ Visualization saved as 'extrinsic_calibration_result.png'\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -421,8 +411,6 @@
     "    cv.imwrite('extrinsic_calibration_result.png', img_corners)\n",
     "    print(\"\\n✓ Visualization saved as 'extrinsic_calibration_result.png'\")\n",
     "    \n",
-    "    cv.imshow('Extrinsic Calibration - Coordinate Axes', img_corners)\n",
-    "    cv.waitKey(0)\n",
     "    cv.destroyAllWindows()"
    ]
   },
@@ -430,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Calibration images:"
+    "## 2. Isolated brick images:"
    ]
   },
   {
@@ -444,81 +432,169 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 11 potential ROIs\n",
-      "Detected 2 LEGO blocks\n",
-      "ROI information: [{'id': 4, 'bbox': (105, 412, 58, 49), 'area': 1526.0}, {'id': 10, 'bbox': (0, 0, 640, 480), 'area': 286565.5}]\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "Brick Count by Color:\n",
+      "------------------------------\n",
+      "Red: 2 brick(s)\n",
+      "Yellow: 3 brick(s)\n",
+      "Green: 3 brick(s)\n",
+      "Blue: 2 brick(s)\n",
+      "White: 2 brick(s)\n",
+      "\n",
+      "Total: 12 bricks\n"
      ]
     }
    ],
    "source": [
-    "# Load image\n",
+    "# Calibration results from calib2\n",
+    "K = np.array([[839.07613989, 0., 339.34164645],\n",
+    "              [0., 839.32227807, 276.31090479],\n",
+    "              [0., 0., 1.]])\n",
+    "\n",
+    "dist = np.array([[-4.32166091e-01, 2.83162078e-01, -2.23954456e-04, \n",
+    "                  4.15174577e-04, -1.38440979e-01]])\n",
+    "\n",
+    "# Load and undistort the main image\n",
     "img = cv.imread('assign1_data/Isolated/colored_bricks.png')\n",
-    "img_copy = img.copy()\n",
+    "undistorted_img = cv.undistort(img, K, dist, None, K)\n",
     "\n",
-    "# Convert to grayscale\n",
-    "gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "# Load and undistort the background image\n",
+    "background_img = cv.imread('assign1_data/Calibration/background.png')\n",
+    "undistorted_bg = cv.undistort(background_img, K, dist, None, K)\n",
     "\n",
-    "# Apply Gaussian blur\n",
-    "blurred = cv.GaussianBlur(gray, (5, 5), 0)\n",
+    "# Background subtraction\n",
+    "diff = cv.absdiff(undistorted_img, undistorted_bg)\n",
     "\n",
-    "# Threshold to segment blocks from background\n",
-    "_, thresh = cv.threshold(blurred, 200, 255, cv.THRESH_BINARY_INV)\n",
+    "# Convert difference to grayscale and threshold\n",
+    "gray_diff = cv.cvtColor(diff, cv.COLOR_BGR2GRAY)\n",
+    "_, foreground_mask = cv.threshold(gray_diff, 25, 255, cv.THRESH_BINARY)\n",
     "\n",
-    "# Find contours (each LEGO block)\n",
-    "contours, _ = cv.findContours(thresh, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "# Apply morphological operations to clean up the mask\n",
+    "kernel = np.ones((5, 5), np.uint8)\n",
+    "foreground_mask = cv.morphologyEx(foreground_mask, cv.MORPH_CLOSE, kernel)\n",
+    "foreground_mask = cv.morphologyEx(foreground_mask, cv.MORPH_OPEN, kernel)\n",
     "\n",
-    "rois = []\n",
-    "print(f\"Found {len(contours)} potential ROIs\")\n",
+    "# Convert to HSV for color detection\n",
+    "hsv = cv.cvtColor(undistorted_img, cv.COLOR_BGR2HSV)\n",
     "\n",
-    "# Extract bounding boxes for each contour\n",
-    "for i, contour in enumerate(contours):\n",
-    "    # Filter small contours (noise)\n",
+    "# Define HSV color ranges for colored bricks\n",
+    "color_ranges = {\n",
+    "    'Red': [(0, 100, 100), (10, 255, 255)],\n",
+    "    'Red2': [(170, 100, 100), (180, 255, 255)],\n",
+    "    'Yellow': [(20, 100, 100), (30, 255, 255)],\n",
+    "    'Green': [(40, 50, 50), (80, 255, 255)],\n",
+    "    'Blue': [(90, 50, 50), (130, 255, 255)],\n",
+    "}\n",
+    "\n",
+    "# Dictionary to store counts\n",
+    "brick_counts = {}\n",
+    "\n",
+    "# Create a copy for visualization\n",
+    "result_img = undistorted_img.copy()\n",
+    "\n",
+    "# Track which areas have been detected as colored bricks\n",
+    "all_colored_mask = np.zeros(foreground_mask.shape, dtype=np.uint8)\n",
+    "\n",
+    "# Process each colored brick type\n",
+    "for color_name, (lower, upper) in color_ranges.items():\n",
+    "    # Create mask for this color\n",
+    "    lower_bound = np.array(lower)\n",
+    "    upper_bound = np.array(upper)\n",
+    "    color_mask = cv.inRange(hsv, lower_bound, upper_bound)\n",
+    "    \n",
+    "    # Combine with foreground mask\n",
+    "    color_mask = cv.bitwise_and(color_mask, foreground_mask)\n",
+    "    \n",
+    "    # Apply morphological operations\n",
+    "    color_mask = cv.morphologyEx(color_mask, cv.MORPH_CLOSE, kernel)\n",
+    "    color_mask = cv.morphologyEx(color_mask, cv.MORPH_OPEN, kernel)\n",
+    "    \n",
+    "    # Find contours\n",
+    "    contours, _ = cv.findContours(color_mask, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "    \n",
+    "    # Filter contours by area\n",
+    "    min_area = 500\n",
+    "    valid_contours = [c for c in contours if cv.contourArea(c) > min_area]\n",
+    "    \n",
+    "    # Handle red color (combine both ranges)\n",
+    "    if color_name == 'Red':\n",
+    "        brick_counts['Red'] = len(valid_contours)\n",
+    "    elif color_name == 'Red2':\n",
+    "        brick_counts['Red'] = brick_counts.get('Red', 0) + len(valid_contours)\n",
+    "    else:\n",
+    "        brick_counts[color_name] = len(valid_contours)\n",
+    "    \n",
+    "    # Draw contours\n",
+    "    cv.drawContours(result_img, valid_contours, -1, (0, 255, 0), 2)\n",
+    "    \n",
+    "    # Add to the colored mask to track what's been detected\n",
+    "    cv.drawContours(all_colored_mask, valid_contours, -1, 255, -1)\n",
+    "\n",
+    "# Now detect white bricks: anything in foreground that wasn't detected as colored\n",
+    "white_mask = cv.bitwise_and(foreground_mask, cv.bitwise_not(all_colored_mask))\n",
+    "\n",
+    "# Apply additional morphological operations to clean white mask more aggressively\n",
+    "kernel_larger = np.ones((7, 7), np.uint8)\n",
+    "white_mask = cv.morphologyEx(white_mask, cv.MORPH_CLOSE, kernel_larger)\n",
+    "white_mask = cv.morphologyEx(white_mask, cv.MORPH_OPEN, kernel_larger)\n",
+    "\n",
+    "# Find white brick contours\n",
+    "white_contours, _ = cv.findContours(white_mask, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "# Filter by area with a higher threshold for white bricks\n",
+    "min_white_area = 800  # Increased threshold for white bricks\n",
+    "white_valid_contours = []\n",
+    "\n",
+    "for contour in white_contours:\n",
     "    area = cv.contourArea(contour)\n",
-    "    if area < 500:  # Adjust threshold based on your image\n",
-    "        continue\n",
-    "    \n",
-    "    # Get bounding rectangle\n",
-    "    x, y, w, h = cv.boundingRect(contour)\n",
-    "    \n",
-    "    # Store ROI information\n",
-    "    rois.append({\n",
-    "        'id': i,\n",
-    "        'bbox': (x, y, w, h),\n",
-    "        'area': area\n",
-    "    })\n",
-    "    \n",
-    "    # Draw bounding box\n",
-    "    cv.rectangle(img_copy, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
-    "    cv.putText(img_copy, f\"ROI {i}\", (x, y-5), \n",
-    "               cv.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 2)\n",
-    "    \n",
-    "    # Extract individual ROI\n",
-    "    roi = img[y:y+h, x:x+w]\n",
-    "    cv.imwrite(f'roi_block_{i}.jpg', roi)\n",
+    "    if area > min_white_area:\n",
+    "        # Additional shape filtering - check if contour is roughly square\n",
+    "        x, y, w, h = cv.boundingRect(contour)\n",
+    "        aspect_ratio = float(w) / h if h > 0 else 0\n",
+    "        \n",
+    "        # LEGO bricks should be roughly square (aspect ratio close to 1.0)\n",
+    "        # Accept if aspect ratio is between 0.5 and 2.0\n",
+    "        if 0.5 <= aspect_ratio <= 2.0:\n",
+    "            white_valid_contours.append(contour)\n",
     "\n",
-    "print(f\"Detected {len(rois)} LEGO blocks\")\n",
-    "print(\"ROI information:\", rois)\n",
+    "brick_counts['White'] = len(white_valid_contours)\n",
     "\n",
-    "cv.imshow('All ROIs Detected', img_copy)\n",
-    "cv.imshow('Threshold', thresh)\n",
-    "cv.waitKey(0)\n",
-    "cv.destroyAllWindows()"
+    "# Draw white brick contours\n",
+    "cv.drawContours(result_img, white_valid_contours, -1, (0, 255, 0), 2)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Brick Count by Color:\")\n",
+    "print(\"-\" * 30)\n",
+    "for color, count in brick_counts.items():\n",
+    "    if color != 'Red2':\n",
+    "        print(f\"{color}: {count} brick(s)\")\n",
+    "print(f\"\\nTotal: {sum(brick_counts.values()) - brick_counts.get('Red2', 0)} bricks\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c)"
    ]
   }
  ],
